fixat mobil layout bugg

--- a/css/style.css
+++ b/css/style.css
@@ -1101,7 +1101,7 @@ body {
 .auth {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   height: 100%;
   background: var(--color-background-root);
@@ -1184,6 +1184,9 @@ body {
 }
 
 @media screen and (min-width: 656px) {
+  .auth {
+    align-items: center;
+  }
   .auth__content {
     max-width: 768px;
   }
