--- a/sass/pages/_auth.scss
+++ b/sass/pages/_auth.scss
@@ -1,7 +1,7 @@
 .auth {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   height: 100%;
   background: var(--color-background-root);
@@ -105,6 +105,8 @@
 
 @media screen and (min-width: 656px) {
   .auth {
+  align-items: center;
+
     &__content {
       max-width: 768px;
     }
